tests/types/errors/while_cond_not_bool.mochi
var n = 5
while n {
  n = n - 1
}
